--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 
     </section>
   </main>
+  <footer class="attribution">
+   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+   Coded by <a href="https://github.com/Valhalla-2">Valhalla</a>.
+ </footer>
 
 </body>
 
