--- a/index.html
+++ b/index.html
@@ -29,29 +29,35 @@
         <p class="description">We only provide great products combined with excellent customer service.
           See what our satisfied customers are saying about our services.</p>
       </div>
-      <div class="product-ratings">
-        <div class="rating-stars">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
+      <div class="stars-ratings">
+        <div class="stars">
+          <div class="">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+          </div>
           <p class="rating">Rated 5 Stars in Reviews</p>
         </div>
-        <div class="rating-stars">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
+        <div class="stars">
+          <div class="">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+          </div>
           <p class="rating">Rated 5 Stars in Report Guru</p>
         </div>
-        <div class="rating-stars">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
-          <img src="images/icon-star.svg" alt="stars icon">
+        <div class="stars">
+          <div class="">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+            <img src="images/icon-star.svg" alt="stars icon">
+          </div>
           <p class="rating">Rated 5 Stars in BestTech</p>
         </div>
 
@@ -64,7 +70,7 @@
         <div class="profile">
           <img src="images/image-colton.jpg" alt="colton smith profile">
           <div class="buyer-info">
-            <h3 class="buyer-name">Colton Smith</h3>
+            <h2 class="buyer-name">Colton Smith</h2>
             <p class="buyer-position">verified buyer</p>
           </div>
         </div>
@@ -77,7 +83,7 @@
         <div class="profile">
           <img src="images/image-irene.jpg" alt="irene roberts profile">
           <div class="buyer-info">
-            <h3 class="buyer-name">Irene Roberts</h3>
+            <h2 class="buyer-name">Irene Roberts</h2>
             <p class="buyer-position">verified buyer</p>
           </div>
         </div>
@@ -89,7 +95,7 @@
         <div class="profile">
           <img src="images/image-anne.jpg" alt="anne wallace profile">
           <div class="buyer-info">
-            <h3 class="buyer-name">Anne Wallace</h3>
+            <h2 class="buyer-name">Anne Wallace</h2>
             <p class="buyer-position">verified buyer</p>
           </div>
         </div>
