made more responsive

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           See what our satisfied customers are saying about our services.</p>
       </div>
       <div class="stars-ratings">
-        <div class="stars">
+        <div class="stars stars-in-reviews">
           <div class="">
             <img src="images/icon-star.svg" alt="stars icon">
             <img src="images/icon-star.svg" alt="stars icon">
@@ -40,7 +40,7 @@
           </div>
           <p class="rating">Rated 5 Stars in Reviews</p>
         </div>
-        <div class="stars">
+        <div class="stars stars-in-report-guru">
           <div class="">
             <img src="images/icon-star.svg" alt="stars icon">
             <img src="images/icon-star.svg" alt="stars icon">
@@ -50,7 +50,7 @@
           </div>
           <p class="rating">Rated 5 Stars in Report Guru</p>
         </div>
-        <div class="stars">
+        <div class="stars stars-in-besttech">
           <div class="">
             <img src="images/icon-star.svg" alt="stars icon">
             <img src="images/icon-star.svg" alt="stars icon">
