finish desktop layout

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="stars-ratings">
         <div class="stars stars-in-reviews">
-          <div class="">
+          <div class="star-icons">
             <img src="images/icon-star.svg" alt="stars icon">
             <img src="images/icon-star.svg" alt="stars icon">
             <img src="images/icon-star.svg" alt="stars icon">
@@ -41,7 +41,7 @@
           <p class="rating">Rated 5 Stars in Reviews</p>
         </div>
         <div class="stars stars-in-report-guru">
-          <div class="">
+          <div class="star-icons">
             <img src="images/icon-star.svg" alt="stars icon">
             <img src="images/icon-star.svg" alt="stars icon">
             <img src="images/icon-star.svg" alt="stars icon">
@@ -51,7 +51,7 @@
           <p class="rating">Rated 5 Stars in Report Guru</p>
         </div>
         <div class="stars stars-in-besttech">
-          <div class="">
+          <div class="star-icons ">
             <img src="images/icon-star.svg" alt="stars icon">
             <img src="images/icon-star.svg" alt="stars icon">
             <img src="images/icon-star.svg" alt="stars icon">
@@ -66,7 +66,7 @@
 
     <section class="product-reviews">
 
-      <article class="col colton-smith">
+      <article class="card colton-smith">
         <div class="profile">
           <img src="images/image-colton.jpg" alt="colton smith profile">
           <div class="buyer-info">
@@ -79,7 +79,7 @@
           Excellent!"</p>
       </article>
 
-      <article class="col irene-roberts">
+      <article class="card irene-roberts">
         <div class="profile">
           <img src="images/image-irene.jpg" alt="irene roberts profile">
           <div class="buyer-info">
@@ -91,7 +91,7 @@
           delighted with the simplicity of the purchase and the speed of delivery."</p>
       </article>
 
-      <article class="col anne-wallace">
+      <article class="card anne-wallace">
         <div class="profile">
           <img src="images/image-anne.jpg" alt="anne wallace profile">
           <div class="buyer-info">
@@ -106,9 +106,9 @@
     </section>
   </main>
   <footer class="attribution">
-   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-   Coded by <a href="https://github.com/Valhalla-2">Valhalla</a>.
- </footer>
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Valhalla-2">Valhalla</a>.
+  </footer>
 
 </body>
 
